--- a/templates/errors/previously-submitted.html
+++ b/templates/errors/previously-submitted.html
@@ -1,9 +1,10 @@
-{% extends 'layouts/_base.html' %}
+{% extends "layouts/_base.html" %}
 
 {% set page_title = _("Submission Complete") %}
+{% set return_previous = _("<a href='{url}'>Return to previous page</a>").format(url = thank_you_url) %}
 
 {% block main %}
-  <h1>{{ _("This page is no longer available") }}</h1>
-  <p>{{ _("Your survey has been submitted") }}</p>
-  <p>{{ _("<a href='{url}'>Return to previous page</a>").format(url = thank_you_url) }}</p>
-{% endblock %}
+    <h1>{{ _("This page is no longer available") }}</h1>
+    <p>{{ _("Your survey has been submitted") }}</p>
+    <p>{{ return_previous }}</p>
+{% endblock main %}
