--- a/templates/layouts/_questionnaire.html
+++ b/templates/layouts/_questionnaire.html
@@ -1,4 +1,5 @@
-{% extends 'layouts/_base.html' %}
+{% extends "layouts/_base.html" %}
+
 {% from "components/button/_macro.njk" import onsButton %}
 
 {% set block = content.block %}
@@ -8,22 +9,24 @@
 {% block main %}
     <button type="submit" class="ons-u-d-no" hidden></button>
 
-    {% block form_errors %}{% endblock %}
+    {% block form_errors %}
+    {% endblock form_errors %}
 
     {% block form_content %}
         <div class="group">
             {% if last_viewed_question_guidance %}
-                {% include 'partials/last_viewed_question_guidance.html' %}
+                {% include "partials/last_viewed_question_guidance.html" %}
             {% endif %}
-            {% include 'partials/block.html' %}
+            {% include "partials/block.html" %}
         </div>
-    {% endblock %}
+    {% endblock form_content %}
 
     {% block submit_button %}
+        {# djlint:off #}
         {{
             onsButton({
                 "variants": 'timer',
-                "text": continue_button_text | default(_("Save and continue")),
+                "text": continue_button_text | default(_("Save and continue") ),
                 "attributes": {
                     "data-qa": "btn-submit",
                     "data-ga-category": "Submit button",
@@ -33,12 +36,15 @@
                 }
             })
         }}
-    {% endblock %}
+        {# djlint:on #}
+    {% endblock submit_button %}
 
     {% block after_submit_button_content %}
         {% if content.return_to_hub_url %}
-            <p class="ons-u-mt-xl"><a href="{{ content.return_to_hub_url }}" data-ga-action="Choose another section click">{{ _("Choose another section and return to this later") }}</a></p>
+            <p class="ons-u-mt-xl">
+                <a href="{{ content.return_to_hub_url }}"
+                   data-ga-action="Choose another section click">{{ _("Choose another section and return to this later") }}</a>
+            </p>
         {% endif %}
-    {% endblock %}
-
-{% endblock %}
+    {% endblock after_submit_button_content %}
+{% endblock main %}
