--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -1,17 +1,20 @@
-{% extends 'errors/_base.html' %}
+{% extends "errors/_base.html" %}
 
 {% set page_title = _("Sorry, there is a problem") %}
+{% set all_contact_us = _("For further help, please <a href='{url}'>contact us</a>.").format(url=contact_us_url) %}
+{% set business_contact_us = _("If you are completing a business survey and you need further help, please <a href='{url}'>contact us</a>.").format(url=business_contact_us_url) %}
+{% set other_contact_us = _("If you started your survey using an access code and you need further help, please <a href='{url}'>contact us</a>.").format(url=other_contact_us_url) %}
 
 {% block main %}
     <h1>{{ _("Sorry, there is a problem") }}</h1>
     <p>{{ _("You may need to update your browser to a newer version.") }}</p>
     <p>{{ _("If the problem still occurs, try using a different browser or device.") }}</p>
-  {% if survey_type in SURVEY_TYPES_ALL %}
-    <p>{{ _("For further help, please <a href='{url}'>contact us</a>.").format(url=contact_us_url) }}</p>
-  {% else %}
-    <h2>{{ _("Business surveys") }}</h2>
-    <p>{{ _("If you are completing a business survey and you need further help, please <a href='{url}'>contact us</a>.").format(url=business_contact_us_url) }}</p>
-    <h2>{{ _("All other surveys") }}</h2>
-    <p>{{ _("If you started your survey using an access code and you need further help, please <a href='{url}'>contact us</a>.").format(url=other_contact_us_url) }}</p>
-  {% endif %}
-{% endblock %}
+    {% if survey_type in SURVEY_TYPES_ALL %}
+        <p>{{ all_contact_us }}</p>
+    {% else %}
+        <h2>{{ _("Business surveys") }}</h2>
+        <p>{{ business_contact_us }}</p>
+        <h2>{{ _("All other surveys") }}</h2>
+        <p>{{ other_contact_us }}</p>
+    {% endif %}
+{% endblock main %}
