--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -1,23 +1,28 @@
-{% extends 'errors/_base.html' %}
+{% extends "errors/_base.html" %}
 
 {% set page_title = _("An error has occurred") %}
+{% set business_sign_in = _("If you have attempted to submit your survey, you should check that this was successful. To do this, <a href='{url}'>sign in to your business survey account</a>.").format(url = business_logout_url) %}
+{% set contact_us = _("If you need more help, <a href='{url}'>contact us</a>.").format(url=contact_us_url) %}
+{% set access_code = _("If you have attempted to submit your survey, you should check that this was successful. To do this, <a href='{url}'>re-enter your code</a>.").format(url = other_logout_url) %}
+{% set business_contact_us = _("If you need more help, <a href='{url}'>contact us about business surveys</a>.").format(url=business_contact_us_url) %}
+{% set other_contact_us = _("If you need more help, <a href='{url}'>contact us about all other surveys</a>.").format(url=other_contact_us_url) %}
 
 {% block main %}
-  <h1>{{ _("Sorry, there is a problem with this service") }}</h1>
-  <p>{{ _("Try again later.") }}</p>
-  <p>{{ _("If you have started a survey, your answers have been saved.") }}</p>
-  {% if survey_type and (survey_type in SURVEY_TYPES_BUSINESS or survey_type in SURVEY_TYPES_DEFAULT) %}
-    <p>{{ _("If you have attempted to submit your survey, you should check that this was successful. To do this, <a href='{url}'>sign in to your business survey account</a>.").format(url = business_logout_url) }}</p>
-    <p>{{ _("If you need more help, <a href='{url}'>contact us</a>.").format(url=contact_us_url) }}</p>
-  {% elif survey_type and survey_type in SURVEY_TYPES_SOCIAL or survey_type in SURVEY_TYPES_HEALTH %}
-    <p>{{ _("If you have attempted to submit your survey, you should check that this was successful. To do this, <a href='{url}'>re-enter your code</a>.").format(url = other_logout_url) }}</p>
-    <p>{{ _("If you need more help, <a href='{url}'>contact us</a>.").format(url=contact_us_url) }}</p>
-  {% else %}
-    <h2>{{ _("Business surveys") }}</h2>
-    <p>{{ _("If you have attempted to submit your survey, you should check that this was successful. To do this, <a href='{url}'>sign in to your business survey account</a>.").format(url = business_logout_url) }}</p>
-    <p>{{ _("If you need more help, <a href='{url}'>contact us about business surveys</a>.").format(url=business_contact_us_url) }}</p>
-    <h2>{{ _("All other surveys") }}</h2>
-    <p>{{ _("If you have attempted to submit your survey, you should check that this was successful. To do this, <a href='{url}'>re-enter your code</a>.").format(url = other_logout_url) }}</p>
-    <p>{{ _("If you need more help, <a href='{url}'>contact us about all other surveys</a>.").format(url=other_contact_us_url) }}</p>
-  {% endif %}
-{% endblock %}
+    <h1>{{ _("Sorry, there is a problem with this service") }}</h1>
+    <p>{{ _("Try again later.") }}</p>
+    <p>{{ _("If you have started a survey, your answers have been saved.") }}</p>
+    {% if survey_type and (survey_type in SURVEY_TYPES_BUSINESS or survey_type in SURVEY_TYPES_DEFAULT) %}
+        <p>{{ business_sign_in }}</p>
+        <p>{{ contact_us }}</p>
+    {% elif survey_type and survey_type in SURVEY_TYPES_SOCIAL or survey_type in SURVEY_TYPES_HEALTH %}
+        <p>{{ access_code }}</p>
+        <p>{{ contact_us }}</p>
+    {% else %}
+        <h2>{{ _("Business surveys") }}</h2>
+        <p>{{ business_sign_in }}</p>
+        <p>{{ business_contact_us }}</p>
+        <h2>{{ _("All other surveys") }}</h2>
+        <p>{{ access_code }}</p>
+        <p>{{ other_contact_us }}</p>
+    {% endif %}
+{% endblock main %}
