--- a/templates/layouts/configs/_header.html
+++ b/templates/layouts/configs/_header.html
@@ -1,5 +1,4 @@
 {% if current_user.is_authenticated and not hide_sign_out_button %}
-
     {% if save_on_signout %}
         {% set sign_out_url = url_for('session.get_sign_out', internal_redirect=true) %}
         {% set header_button_text = sign_out_button_text %}
@@ -13,7 +12,7 @@
         {% set header_button_data_ga_action = "Exit" %}
         {% set header_button_data_ga_label = "Exit button click" %}
     {% endif %}
-
+    {# djlint:off #}
     {% set signout_button = {
         "text": header_button_text,
         "url": sign_out_url,
@@ -27,16 +26,17 @@
         "iconType": "exit",
         "iconPosition": "after"
     } %}
-
+    {# djlint:on #}
 {% endif %}
-
+{# djlint:off #}
 {% do pageConfig | setAttribute("header", {
     "title": survey_title,
     "signoutButton": signout_button,
     "language": languages,
     "serviceLinks": service_links,
     "mastheadLogo": {
-        "large": masthead_logo,
-        "small": masthead_logo_mobile
+    "large": masthead_logo,
+    "small": masthead_logo_mobile
     }
 }) %}
+{# djlint:on #}
