--- a/templates/listcollectorcontent.html
+++ b/templates/listcollectorcontent.html
@@ -1,25 +1,17 @@
-{% extends 'layouts/_questionnaire.html' %}
-{% import 'macros/helpers.html' as helpers %}
+{% extends "layouts/_questionnaire.html" %}
+
+{% import "macros/helpers.html" as helpers %}
 
 {% set save_on_signout = true %}
-
 {% set continue_button_text = _("Continue") %}
-
 {% set title = content.title %}
 {% set contents = content.contents %}
 
 {% block form_content %}
-
-  <h1>{{ title }}</h1>
-
-  {%- if content.list and content.list.list_items -%}
-    {% set list = content.list %}
-    <div class="ons-u-mb-m">
-      {% include 'partials/summary/list-summary.html' %}
-    </div>
-  {%- endif -%}
-
-  {% include 'partials/contents.html' %}
-
-{% endblock %}
-
+    <h1>{{ title }}</h1>
+    {%- if content.list and content.list.list_items -%}
+        {% set list = content.list %}
+        <div class="ons-u-mb-m">{% include "partials/summary/list-summary.html" %}</div>
+    {%- endif -%}
+    {% include "partials/contents.html" %}
+{% endblock form_content %}
