--- a/templates/partials/answers/duration.html
+++ b/templates/partials/answers/duration.html
@@ -1,38 +1,37 @@
 {% from "components/duration/_macro.njk" import onsDuration %}
 
 {% set config = {
-  "id": answer.id,
-  "dontWrap": not answer.label,
-  "mutuallyExclusive": mutuallyExclusive,
-  "error": error,
-  "legendOrLabel": answer.label
+    "id": answer.id,
+    "dontWrap": not answer.label,
+    "mutuallyExclusive": mutuallyExclusive,
+    "error": error,
+    "legendOrLabel": answer.label
 } %}
-
 {% set years = form.fields[answer.id].years %}
 {% set months = form.fields[answer.id].months %}
-
+{# djlint:off #}
 {% if years %}
-  {% set config = config | setAttribute("field1", {
-    "id": years.id,
-    "name": years.name,
-    "value": years.data if years.data is not none else '',
-    "suffix": {
-      "id": years.id ~ "-type",
-      "text": _(years.label.text)
-    }
-  }) %}
+    {% set config = config | setAttribute("field1", {
+        "id": years.id,
+        "name": years.name,
+        "value": years.data if years.data is not none else '',
+        "suffix": {
+            "id": years.id ~ "-type",
+            "text": _(years.label.text)
+        }
+    }) %}
 {% endif %}
-
 {% if months %}
-  {% set config = config | setAttribute("field2", {
-    "id": months.id,
-    "name": months.name,
-    "value": months.data if months.data is not none else '',
-    "suffix": {
-      "id": months.id ~ "-type",
-      "text": _(months.label.text)
-    }
-  }) %}
-{% endif %}
 
+    {% set config = config | setAttribute("field2", {
+        "id": months.id,
+        "name": months.name,
+        "value": months.data if months.data is not none else '',
+        "suffix": {
+            "id": months.id ~ "-type",
+            "text": _(months.label.text)
+        }
+    }) %}
+{% endif %}
 {{ onsDuration(config) }}
+{# djlint:on #}
