--- a/templates/partials/answers/unit.html
+++ b/templates/partials/answers/unit.html
@@ -1,28 +1,31 @@
 {% from "components/input/_macro.njk" import onsInput %}
 
 {% set input = form.fields[answer['id']] %}
-
-{{ onsInput({
-  "id": answer.id,
-  "type": "number",
-  "classes": "js-totaliser-input-calculated" if answer.calculated,
-  "name": input.name,
-  "value": input._value() | e,
-  "label": {
-    "id": answer.id ~ "-label",
-    "text": answer.label,
-    "description": answer.description
-  },
-  "suffix": {
-    "id": answer.id ~ "-type",
-    "title": format_unit_input_label(answer.unit, unit_length="long"),
-    "text": format_unit_input_label(answer.unit, unit_length=answer.unit_length)
-  },
-  "attributes": {
-    "data-qa": "input-text"
-  },
-  "dontWrap": true if mutuallyExclusive else false,
-  "mutuallyExclusive": mutuallyExclusive,
-  "width": get_width_for_number(answer),
-  "error": error
-}) }}
+{# djlint:off #}
+{{
+    onsInput({
+        "id": answer.id,
+        "type": "number",
+        "classes": "js-totaliser-input-calculated" if answer.calculated,
+        "name": input.name,
+        "value": input._value() | e,
+        "label": {
+            "id": answer.id ~ "-label",
+            "text": answer.label,
+            "description": answer.description
+        },
+        "suffix": {
+            "id": answer.id ~ "-type",
+            "title": format_unit_input_label(answer.unit, unit_length="long"),
+            "text": format_unit_input_label(answer.unit, unit_length=answer.unit_length)
+        },
+        "attributes": {
+            "data-qa": "input-text"
+        },
+        "dontWrap": true if mutuallyExclusive else false,
+        "mutuallyExclusive": mutuallyExclusive,
+        "width": get_width_for_number(answer),
+        "error": error
+    })
+}}
+{# djlint:on #}
