--- a/templates/partials/introduction/basic.html
+++ b/templates/partials/introduction/basic.html
@@ -1,7 +1,5 @@
 <div id="{{ content_block.id }}" class="ons-u-mb-s ons-u-mt-m">
-    {% if content_block.title %}
-        <{{ title_tag }}>{{ content_block.title }}</{{ title_tag }}>
-    {% endif %}
+    {% if content_block.title %}<{{ title_tag }}>{{ content_block.title }}</{{ title_tag }}>{% endif %}
     {% set contents = content_block.contents %}
-    {% include 'partials/contents.html' %}
+    {% include "partials/contents.html" %}
 </div>
