--- a/templates/submit-with-summary.html
+++ b/templates/submit-with-summary.html
@@ -1,7 +1,5 @@
-{% extends 'layouts/_submit.html' %}
+{% extends "layouts/_submit.html" %}
 
 {% block summary %}
-  <div class="ons-u-mb-m">
-    {% include 'partials/summary/summary.html' %}
-  </div>
-{%  endblock summary %}
+    <div class="ons-u-mb-m">{% include "partials/summary/summary.html" %}</div>
+{% endblock summary %}
