--- a/templates/partials/individual-response-guidance.html
+++ b/templates/partials/individual-response-guidance.html
@@ -15,7 +15,7 @@
 %}
     <div class="ons-u-mt-s">
         <p>
-            {{ _("You can <em>share your household access code</em> with the people you live with so they can complete their own sections.") }}
+            {{ _("You can <strong>share your household access code</strong> with the people you live with so they can complete their own sections.") }}
         </p>
         <p data-qa=individual-response-url>
             {{ _("If this is not possible, there are <a href={url}>other ways each person can complete their own census.</a>").format(url=content.individual_response_url) }}
