fix panel breaking change

--- a/templates/multiple_survey.html
+++ b/templates/multiple_survey.html
@@ -9,7 +9,7 @@
     {# djlint:off #}
     {% call
         onsPanel({
-            "type": "error",
+            "variant": "error",
             "spacious": true,
             "attributes": {
                 "data-qa": "multiple-survey-error"
