--- a/templates/partials/error-panel.html
+++ b/templates/partials/error-panel.html
@@ -15,7 +15,7 @@
 {% endfor %}
 {% call
     onsPanel({
-        "type": "error",
+        "variant": "error",
         "classes": "ons-u-mb-s",
         "title": error_title,
         "attributes": {
