--- a/templates/signed-out.html
+++ b/templates/signed-out.html
@@ -9,7 +9,7 @@
     {{
         onsPanel({
             "id": '',
-            "type": 'success',
+            "variant": 'success',
             "iconType": 'check',
             "iconSize": 'xl',
             "classes": "ons-u-mb-xl",
