--- a/templates/confirmation-email-sent.html
+++ b/templates/confirmation-email-sent.html
@@ -11,7 +11,7 @@
     {% call
         onsPanel({
             "spacious": true,
-            "type": "success",
+            "variant": "success",
             "classes": "ons-u-mb-s",
             "iconType": "check",
             "iconSize": "xl"
@@ -23,7 +23,7 @@
     {% endcall %}
     {% call
         onsPanel({
-            "type": "bare",
+            "variant": "bare",
             "classes": "ons-u-mb-s",
             "iconType": "lock"
         })
