--- a/templates/feedback-sent.html
+++ b/templates/feedback-sent.html
@@ -12,7 +12,7 @@
     {% call
         onsPanel({
             "spacious": true,
-            "type": "success",
+            "variant": "success",
             "classes": "ons-u-mb-s",
             "iconType": "check",
             "iconSize": "xl"
