--- a/templates/individual_response/confirmation-post.html
+++ b/templates/individual_response/confirmation-post.html
@@ -9,7 +9,7 @@
     {# djlint:off #}
     {% call
         onsPanel({
-            "type": "success",
+            "variant": "success",
             "classes": "ons-u-mb-m",
             "iconType": "check",
             "iconSize": "l"
