--- a/templates/individual_response/confirmation-text-message.html
+++ b/templates/individual_response/confirmation-text-message.html
@@ -9,7 +9,7 @@
     {# djlint:off #}
     {% call
         onsPanel({
-            "type": "success",
+            "variant": "success",
             "classes": "ons-u-mb-m",
             "iconType": "check",
             "iconSize": "l"
@@ -25,7 +25,7 @@
     {% endcall %}
     {% call
         onsPanel({
-            "type": "bare",
+            "variant": "bare",
             "classes": "ons-u-mb-s",
             "iconType": "lock"
         })
