--- a/templates/individual_response/confirmation-text-message.html
+++ b/templates/individual_response/confirmation-text-message.html
@@ -9,7 +9,7 @@
     {# djlint:off #}
     {% call
         onsPanel({
-            "type": "success",
+            "variant": "success",
             "classes": "ons-u-mb-m",
             "iconType": "check",
             "iconSize": "l"
@@ -25,13 +25,13 @@
     {% endcall %}
     {% call
         onsPanel({
-            "type": "bare",
+            "variant": "bare",
             "classes": "ons-u-mb-s",
             "iconType": "lock"
         })
     %}
         <p>
-            {{ _("The text will be sent from <em>Census2021</em>") }}
+            {{ _("The text will be sent from <strong>Census2021</strong>") }}
         </p>
     {% endcall %}
     {{
